# libmpack

./: .gitignore  .travis.yml  .ubsan-blacklist  Makefile  README.md  mpack.pc.in  premake5.lua
.ci/: arm_test_setup.sh
.config/: amalgamation.mk  armeb.mk  asan.mk  debug.mk  msan.mk  release.mk  ubsan.mk
binding/lua/: Makefile  leak_test.lua  lmpack.c  mpack-1.0.0-0.rockspec  mpack-1.0.1-0.rockspec  mpack-1.0.2-0.rockspec  mpack-1.0.3-0.rockspec  mpack-1.0.4-0.rockspec  test.lua
binding/python/: .gitignore  README.rst  ci.sh  mpack.pyx  setup.py  test.py
examples/libuv-client-server/: CMakeLists.txt  client.c  cvector.h  rpc.c  rpc.h  server.c  util.c  util.h  uv_rpc.c  uv_rpc.h  uv_util.c  uv_util.h
include/: mpack.h
src/: compat.c  conv.c  conv.h  core.c  core.h  mpack.c  mpack_conv.c  mpack_conv.h  mpack_core.c  mpack_core.h  object.c  object.h  rpc.c  rpc.h  unpack.c
test/: fixtures.c  fixtures.h  fixtures.inl  mpack.c  tap.h
